[workspace]
	members = [
		"serde_avro_derive",
		"serde_avro_derive_macros",
		"serde_avro_fast",
	]
	resolver = "2"

	[workspace.lints.rust]
		missing_docs = "warn"
	[workspace.lints.clippy]
		explicit_auto_deref = "allow"
		missing_safety_doc = "deny"
		needless_lifetimes = "allow"
		single_match = "allow"
		tabs_in_doc_comments = "allow"
		undocumented_unsafe_blocks = "deny"
		unwrap_or_default = "allow"
