[package]
	authors = ["Thomas BESSOU <thomas.bessou@hotmail.fr>"]
	description = "Derive avro schema for Rust structs for serde_avro_fast"
	edition = "2021"
	license = "LGPL-3.0-only"
	name = "serde_avro_derive"
	repository = "https://github.com/Ten0/serde_avro_fast"
	version = "0.1.2"
	workspace = ".."

[dependencies]
	serde_avro_derive_macros = { path = "../serde_avro_derive_macros", version = "0.1" }
	serde_avro_fast = { path = "../serde_avro_fast", version = "1.0.0" }

[dev-dependencies]
	lazy_static = "1"
	pretty_assertions = "1"
	regex = "1"
	serde_json = "1"

[lints]
	workspace = true
