[package]
	authors = ["Thomas BESSOU <thomas.bessou@hotmail.fr>"]
	description = "An idiomatic implementation of serde/avro (de)serialization"
	edition = "2021"
	license = "LGPL-3.0-only"
	name = "serde_avro_fast"
	repository = "https://github.com/Ten0/serde_avro_fast"
	version = "1.1.1"
	workspace = ".."

[features]
	default = ["deflate"]
	deflate = ["flate2"]
	snappy = ["snap", "crc32fast"]
	xz = ["xz2"]
	zstandard = ["zstd"]

[dependencies]
	bzip2 = { version = "0.4", optional = true }
	crc32fast = { version = "1", optional = true }
	flate2 = { version = "1", optional = true }
	integer-encoding = { default-features = false, version = "4" }
	num-traits = "0.2"
	rand = "0.8"
	rust_decimal = { version = "1", default-features = false, features = ["std", "serde-with-str"] }
	serde = "1"
	serde-transcode = "1"
	serde_derive = "1"
	serde_json = "1"
	serde_serializer_quick_unsupported = "0.1"
	snap = { version = "1", optional = true }
	thiserror = "1"
	xz2 = { version = "0.1", optional = true }
	zstd = { version = "0.13", optional = true }

[dev-dependencies]
	anyhow = "1"
	apache-avro = { version = "0.14", features = ["bzip", "snappy", "xz", "zstandard"] }
	criterion = "0.5"
	lazy_static = "1"
	ouroboros = "0.18"
	paste = "1"
	pretty_assertions = "1"
	serde-tuple-vec-map = "1"
	serde_avro_derive = { path = "../serde_avro_derive", version = "0.2" }
	serde_bytes = "0.11"

[package.metadata.docs.rs]
	all-features = true
	rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
	harness = false
	name = "single"

[[bench]]
	harness = false
	name = "object_container_file_encoding"

[lints]
	workspace = true
