[package]
	authors = ["Thomas BESSOU <thomas.bessou@hotmail.fr>"]
	description = "An idiomatic implementation of serde/avro (de)serialization"
	edition = "2021"
	license = "LGPL-3.0-only"
	name = "serde_avro_fast"
	repository = "https://github.com/Ten0/serde_avro_fast"
	version = "2.0.0"
	workspace = ".."

[features]
	default = ["std", "deflate"]
	std = [
		"serde/std",
		"serde_json/std",
		"num-traits/std",
		"rand/std",
		"rand/std_rng",
		"rust_decimal/std",
	]
	deflate = ["std", "flate2"]
	snappy = ["std", "snap", "crc32fast"]
	xz = ["std", "xz2"]
	zstandard = ["std", "zstd"]
	bzip2 = ["std", "dep:bzip2"]

[dependencies]
	bzip2 = { version = "0.4", optional = true }
	crc32fast = { version = "1", optional = true }
	flate2 = { version = "1", optional = true }
	hashbrown = "0.16"
	integer-encoding = { default-features = false, version = "4" }
	num-traits = { version = "0.2", default-features = false }
	rand = { version = "0.8", default-features = false, features = ["small_rng"] }
	rust_decimal = { version = "1", default-features = false, features = ["serde-with-str"] }
	serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
	serde-transcode = "1"
	serde_derive = "1"
	serde_json = { version = "1", default-features = false, features = ["alloc"] }
	serde_serializer_quick_unsupported = "0.1"
	snap = { version = "1", optional = true }
	thiserror = "1"
	xz2 = { version = "0.1", optional = true }
	zstd = { version = "0.13", optional = true }

[dev-dependencies]
	anyhow = "1"
	apache-avro = { version = "0.17", features = ["bzip", "snappy", "xz", "zstandard"] }
	criterion = "0.5"
	lazy_static = "1"
	paste = "1"
	pretty_assertions = "1"
	serde-tuple-vec-map = "1"
	serde_avro_derive = { path = "../serde_avro_derive" }
	serde_bytes = "0.11"

[package.metadata.docs.rs]
	all-features = true
	rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
	harness = false
	name = "single"

[[bench]]
	harness = false
	name = "object_container_file_encoding"

[lints]
	workspace = true
